--- a/topology3/Vagrantfile
+++ b/topology3/Vagrantfile
@@ -2,8 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
- # creating a topology with the servers having same memory allocated and gui disabled.
- # VM based different operating system
+  config.vm.box = "bento/ubuntu-16.04"
+ # creating a topology with the servers having same memory allocated, gui disabled and operating system.
  # vbox level naming is not possible.VMs take up local folder name as prefix.
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
@@ -12,19 +12,16 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.define "webapp01" do |webtier|
-    webtier.vm.box = "bento/ubuntu-16.04"
     webtier.vm.hostname = "webapp01"
     webtier.vm.network "private_network", ip: "192.168.44.10"
   end
 
   config.vm.define "webapp02" do |webtier|
-    webtier.vm.box = "bento/centos-7.4"
     webtier.vm.hostname = "webapp02"
     webtier.vm.network "private_network", ip: "192.168.44.11"
   end
 
   config.vm.define "dbsrv01" do |dbtier|
-    dbtier.vm.box = "bento/ubuntu-16.04"
     dbtier.vm.hostname = "dbsrv01"
     dbtier.vm.network "private_network", ip: "192.168.44.12"
   end
