--- a/vagrantfiles/topology4/Vagrantfile
+++ b/vagrantfiles/topology4/Vagrantfile
@@ -1,13 +1,10 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# Ansible Parallel Execution
-#https://www.vagrantup.com/docs/provisioning/ansible.html
-
 
 GUI = false # Enable/Disable GUI
 RAM = 512 # Default memory size in MB
-
+CPU = 2
 Vagrant.configure(2) do |config|
 
       N = 2
@@ -16,7 +13,7 @@ Vagrant.configure(2) do |config|
               config.vm.provider "virtualbox" do |vb|
                 vb.gui = GUI
                 vb.memory = RAM
-                vb.cpus = 1
+                vb.cpus = CPU
                 #vb.name = "machine#{machine_id}"
               end
 
@@ -25,15 +22,6 @@ Vagrant.configure(2) do |config|
                 machine.vm.hostname = "machine#{machine_id}"
                 machine.vm.network "private_network", ip: "192.168.45.#{10+machine_id}"
 
-                # Only execute once the Ansible provisioner,
-                # when all the machines are up and ready.
-                # if machine_id == N
-                    #   machine.vm.provision :ansible do |ansible|
-                    #     # Disable default limit to connect to all the machines
-                    #     ansible.limit = "all"
-                    #     ansible.playbook = "playbook.yml"
-                    #   end
-                # end
               end
       end
 
