--- a/docker-box-centos/Vagrantfile
+++ b/docker-box-centos/Vagrantfile
@@ -18,7 +18,8 @@ Vagrant.configure("2") do |config|
       webtier.vm.provision "ansible_local" do |ansible|
         ansible.playbook = "deploy.yml"
         ansible.become = true
-        ansible.version = "2.8.0"
+        ansible.compatibility_mode = "2.0"
+        ansible.version = "2.8.2"
       end
       webtier.vm.provision "shell", inline: <<-SHELL
           sudo yum remove docker \
@@ -39,7 +40,7 @@ Vagrant.configure("2") do |config|
                           docker-ce-cli \
                           containerd.io
           sudo systemctl start docker && sudo docker --version
-          echo "control01 up && running"
+          hostnamectl status
       SHELL
     end
 
