--- a/docker-box-ubuntu/Vagrantfile
+++ b/docker-box-ubuntu/Vagrantfile
@@ -8,19 +8,18 @@ Vagrant.configure("2") do |config|
     vb.cpus = 1
   end
 
-  config.vm.define "control01" do |webtier|
-      # webtier.vm.box = "bento/ubuntu-16.04"
-      # webtier.vm.box = "bento/ubuntu-18.04"
-      webtier.vm.box = "bento/ubuntu-18.10"
-      webtier.vm.hostname = "control01"
+  config.vm.define "control02" do |webtier|
+      webtier.vm.box = "bento/ubuntu-19.04"
+      webtier.vm.hostname = "control02"
       webtier.vm.network "private_network", ip: "192.168.45.41"
       webtier.vm.provider "virtualbox" do |vb|
-          vb.name = "control01"
+          vb.name = "control02"
       end
       webtier.vm.provision "ansible_local" do |ansible|
         ansible.playbook = "deploy.yml"
         ansible.become = true
-        ansible.version = "2.8.1"
+        ansible.compatibility_mode = "2.0"
+        ansible.version = "2.8.4"
       end
       webtier.vm.provision "shell", inline: <<-SHELL
             sudo apt-get update
@@ -35,7 +34,7 @@ Vagrant.configure("2") do |config|
             sudo apt-get update
             sudo apt-get install docker-ce -y
             sudo docker --version
-            echo "control01 up && running"
+            hostnamectl status
       SHELL
     end
 
