--- a/docker-box-fedora/Vagrantfile
+++ b/docker-box-fedora/Vagrantfile
@@ -18,6 +18,7 @@ Vagrant.configure("2") do |config|
       webtier.vm.provision "ansible_local" do |ansible|
         ansible.playbook = "deploy.yml"
         ansible.become = true
+        ansible.compatibility_mode = "2.0"
         ansible.version = "2.8.0"
       end
       webtier.vm.provision "shell", inline: <<-SHELL
