--- a/docker-compose-sandbox/Vagrantfile
+++ b/docker-compose-sandbox/Vagrantfile
@@ -27,6 +27,7 @@ sudo curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-
 sudo chmod +x /usr/local/bin/docker-compose && sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 sudo docker-compose --version
 sudo yum install traceroute -y
+hostnamectl status
 SCRIPT
 Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
