--- a/passwordless_ssh_ansible/Vagrantfile
+++ b/passwordless_ssh_ansible/Vagrantfile
@@ -2,16 +2,16 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
+  # vagrant box updates updates.
+  config.vm.box_check_update = false
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
     vb.memory = "512"
     vb.cpus = 1
+    vb.customize ["modifyvm", :id, "--groups", "/passwordless-ssh-sandbox"] # create vbox group
   end
 
   config.vm.define "apache01" do |webtier|
-
-    # vagrant box updates updates.
-    config.vm.box_check_update = true
     webtier.vm.box = "bento/centos-7.6"
     webtier.vm.hostname = "apache01"
     webtier.vm.network "private_network", ip: "192.168.45.10"
@@ -47,6 +47,23 @@ Vagrant.configure("2") do |config|
       SHELL
       end
 
+      config.vm.define "client01" do |webtier|
+        webtier.vm.box = "bento/centos-7.6"
+        webtier.vm.hostname = "client01"
+        webtier.vm.network "private_network", ip: "192.168.45.12"
+        webtier.vm.provider "virtualbox" do |vb|
+            vb.name = "client01"
+        end
+        webtier.vm.provision "ansible_local" do |ansible|
+        ansible.playbook = "provisioning/deploy.yml"
+        ansible.become = true
+        ansible.compatibility_mode = "2.0"
+        ansible.version = "2.8.2" #centos
+        end
+        webtier.vm.provision "shell", inline: <<-SHELL
+            hostnamectl status
+        SHELL
+        end
 
 
 end
