--- a/docker-box-multi/Vagrantfile
+++ b/docker-box-multi/Vagrantfile
@@ -28,25 +28,35 @@ sudo mv terraform /usr/local/bin/
 terraform version
 SCRIPT
 $ubuntu_docker_script = <<SCRIPT
-  # Install Docker
-  sudo apt-get update
-  sudo apt-get remove docker docker-engine docker.io
-  sudo apt-get install apt-transport-https ca-certificates curl software-properties-common -y
-  curl -fsSL https://download.docker.com/linux/ubuntu/gpg |  sudo apt-key add -
-  apt-key fingerprint 0EBFCD88
-  sudo add-apt-repository \
-  "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-  $(lsb_release -cs) \
-  stable"
-  sudo apt-get update
-  sudo apt-get install docker-ce -y
-  docker --version
-  # Install Terraform
-  sudo apt-get install unzip -y
-  wget -q -nc https://releases.hashicorp.com/terraform/0.12.6/terraform_0.12.6_linux_amd64.zip
-  unzip terraform_0.12.6_linux_amd64.zip
-  sudo mv terraform /usr/local/bin/
-  terraform version
+# Get Docker Engine - Community for Ubuntu
+# https://docs.docker.com/install/linux/docker-ce/ubuntu/
+sudo apt-get remove docker docker-engine docker.io containerd runc
+sudo apt-get update
+sudo apt-get install \
+apt-transport-https \
+ca-certificates \
+curl \
+software-properties-common -y
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+sudo apt-key fingerprint 0EBFCD88
+sudo add-apt-repository \
+"deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+$(lsb_release -cs) \
+stable"
+sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli containerd.io -y
+sudo docker --version
+# Manage Docker as a non-root user
+# https://docs.docker.com/install/linux/linux-postinstall/
+sudo groupadd docker && sudo usermod -aG docker vagrant # add user to the docker group
+sudo systemctl enable docker
+docker --version
+# Install Terraform
+sudo apt-get install unzip -y
+wget -q -nc https://releases.hashicorp.com/terraform/0.12.6/terraform_0.12.6_linux_amd64.zip
+unzip terraform_0.12.6_linux_amd64.zip
+sudo mv terraform /usr/local/bin/
+terraform version
 SCRIPT
 Vagrant.configure(2) do |config|
   config.vm.box_check_update = false
