--- a/envoy-sandbox/provisioning/roles/common/tasks/hosts_entry.yml
+++ b/envoy-sandbox/provisioning/roles/common/tasks/hosts_entry.yml
@@ -8,4 +8,5 @@
     marker: "# {mark} ANSIBLE MANAGED BLOCK {{ item.nameshort }}"
   with_items:
   - { ip: 192.168.18.9, namelong: vagrant-envoy-01.local, nameshort: vagrant-envoy-01 }
+  # - { ip: 192.168.18.9, namelong: vagrant-envoy-01.local, nameshort: vagrant-envoy-01 }
   when: add_host_entries
